# Translate_lib

./: LICENSE  ReadMe.md  pyproject.toml
src/TranslatePlus/: __init__.py  main.py
src/TranslatePlus.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/Translate_moh0009/: languages.py
src/Translate_moh0009.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
